--- a/console/index.html
+++ b/console/index.html
@@ -63,7 +63,7 @@
 				Print("%$YEnter [CMDS] to view the list of available commands.");
 				let log = document.createElement('p');
 				log.className = 'consoleLog';
-				log.innerHTML = "<a href='https://youtu.be/dQw4w9WgXcQ'>Click here to open the SCCOL documentation.</a>";
+				log.innerHTML = "<a href='../docs/sccol/'>Click here to open the SCCOL documentation.</a>";
 				windowContent.insertBefore(log, prefixP);
 			}
 			function OnInput(){
