--- a/s-messenger/index.html
+++ b/s-messenger/index.html
@@ -284,7 +284,7 @@
 			
 			function ChangeVersion(){
 				var rawFile = new XMLHttpRequest();
-				rawFile.open("GET", 'https://greatcorn.github.io/scom/manifest.json', true);
+				rawFile.open("GET", 'https://greatcorn.github.io/scom/s-messenger/manifest.json', true);
 				rawFile.onload = function (){
 					if(rawFile.readyState === rawFile.DONE){
 						if(rawFile.status === 200 || rawFile.status == 0){
@@ -303,7 +303,7 @@
 					checkNVTimer = 0;
 				}
 				var rawFile = new XMLHttpRequest();
-				rawFile.open("GET", 'https://greatcorn.github.io/scom/manifest.json', true);
+				rawFile.open("GET", 'https://greatcorn.github.io/scom/s-messenger/manifest.json', true);
 				rawFile.onload = function (){
 					if(rawFile.readyState === rawFile.DONE){
 						if(rawFile.status === 200 || rawFile.status == 0){
